add_executable(my_algo ../main.cpp)
add_executable(hanoi hanoi.cpp)
add_executable(match match.cpp)
add_executable(expression expression.cpp)
add_executable(partner partner.cpp)
add_executable(dual_stack dual_stack.cpp)
add_executable(palindrome palindrome.cpp)
add_executable(pop_push_stack pop_push_stack.cpp)
