add_executable(my_algo ../main.cpp)
add_executable(hanoi hanoi.cpp)
add_executable(match match.cpp)
add_executable(expression expression.cpp)
add_executable(partner partner.cpp)
add_executable(dual_stack dual_stack.cpp)
add_executable(palindrome palindrome.cpp)
add_executable(pop_push_stack pop_push_stack.cpp)
add_executable(reverse-poland reverse_poland.cpp)
add_executable(stack_operation_legal stack_operation_legal.cpp)
add_executable(create_loop_queue create_loop_queue.cpp)
add_executable(ackermann ackermann.cpp)
add_executable(char_count char_count.cpp)
